# minipress

./: .env.example  .gitignore  Cargo.toml  NOTES.md  README.md  package.json
migrations/: 20201121010256_users.sql  20201121010307_posts.sql
resources/postcss/: styles.pcss  tailwind.config.js
resources/templates/: error.hbs  index.hbs
resources/templates/components/: dropdown.hbs  dropdown_script.hbs
resources/templates/layouts/: app_layout.hbs  nav_link.hbs  navbar.hbs  sidebar.hbs
src/: database.rs  main.rs  template_helpers.rs
src/handlers/: favicon_handlers.rs  index_handler.rs  mod.rs  post_handlers.rs  user_handlers.rs
src/handlers/github_oauth2/: auth_handler.rs  login_handler.rs  logout_handler.rs  mod.rs  state.rs
src/middleware/: error_handlers.rs  mod.rs
src/models/: mod.rs  post.rs  user.rs
static/css/: styles.min.css
