[package]
name = "minipress"
version = "0.1.0"
authors = ["nic96 <nic96@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "1.0"
actix-session = "0.4"
actix-identity = "0.3"
actix-web = { version = "3", features = ["openssl"] }
anyhow = "1.0"
time = { version = "0.2", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
log = "0.4"
oauth2 = "3.0"
openssl = { version="0.10" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
simple_logger = "1.11"
slug = "0.1"
sqlx = { version = "0.4", features = ["time", "postgres", "macros", "uuid", "runtime-actix-native-tls", "json"] }
url = "2.2"
